--- a/web/sites/all/themes/custom/kbooui/less/custom/components/interior.less
+++ b/web/sites/all/themes/custom/kbooui/less/custom/components/interior.less
@@ -1,7 +1,12 @@
 #main-body {
   background-color: fade(@white, 85%);
   padding: @pad @pad-md;
+  width: 72%;
 } 
+
+hr {
+  border-top-color: @light-blue;
+}
 
 .node {
   .node-images {
