--- a/web/sites/all/themes/custom/kbooui/less/custom/components/sidebar.less
+++ b/web/sites/all/themes/custom/kbooui/less/custom/components/sidebar.less
@@ -1,6 +1,7 @@
 #sidebar {
   padding-left: 0px;
   padding-right: 0px;
+  margin-left: 3%;
 
   @media (max-width: @screen-xs-max) {
     margin-top: @margin-md;
