--- a/web/sites/all/themes/custom/kbooui/less/custom/utilities/headings.less
+++ b/web/sites/all/themes/custom/kbooui/less/custom/utilities/headings.less
@@ -1,5 +1,6 @@
 h1 {
   &.page-header {
     margin-top: @margin-sm;
+    border-bottom: 1px solid @light-blue;
   }
 }
