--- a/web/sites/all/themes/custom/kbooui/less/custom/variables/colors.less
+++ b/web/sites/all/themes/custom/kbooui/less/custom/variables/colors.less
@@ -4,6 +4,7 @@
 @dark-red: #a32a29;
 @light-red: #e84b37;
 @red: #971a31;
+@light-blue: #7f9da5;
 
 @white: #ffffff;
 @black: #000000;
