--- a/web/sites/all/themes/custom/kbooui/less/overrides/variables/navs.less
+++ b/web/sites/all/themes/custom/kbooui/less/overrides/variables/navs.less
@@ -2,12 +2,12 @@
 @nav-link-hover-bg: @gray-lighter;
 @nav-disabled-link-color: @gray-light;
 @nav-disabled-link-hover-color: @gray-light;
-@nav-tabs-border-color: #ddd;
+@nav-tabs-border-color: @light-blue;
 @nav-tabs-link-hover-border-color: @gray-lighter;
 @nav-tabs-active-link-hover-bg: @body-bg;
-@nav-tabs-active-link-hover-color: @gray;
-@nav-tabs-active-link-hover-border-color: #ddd;
-@nav-tabs-justified-link-border-color: #ddd;
+@nav-tabs-active-link-hover-color: @light-blue;
+@nav-tabs-active-link-hover-border-color: @light-blue;
+@nav-tabs-justified-link-border-color: @light-blue;
 @nav-tabs-justified-active-link-border-color: @body-bg;
 @nav-pills-border-radius: @border-radius-base;
 @nav-pills-active-link-hover-bg: @component-active-bg;
